--- a/QueueIT/Views/Teams/Show.cshtml
+++ b/QueueIT/Views/Teams/Show.cshtml
@@ -81,7 +81,7 @@
         <br/>
         <div id="team-profile-members-header">
             <h4 class="display-7 secondary-text" style="float: left">Team Members <strong>(@Model.TeamMembers.Count)</strong></h4>
-            <button class="my-btn my-btn-primary" style="float: right"
+            <button id="inv-mbr-btn" class="my-btn my-btn-primary" style="float: right"
                     data-toggle="modal" data-target="#exampleModal">
                 Invite Members
             </button>
@@ -90,7 +90,7 @@
             <tbody>
             @foreach (var user in @Model.TeamMemberUsers)
             {
-                <tr>
+                <tr id="@user.Id">
                     <td id="member-avatar" class="team-member-td">
                         <div class="avatar-circle">
                             <span class="initials">@user.FirstName.Substring(0, 1)@user.LastName.Substring(0, 1)</span>
@@ -131,14 +131,14 @@
                                     {
                                         if (member.IsAdmin)
                                         {
-                                            <select class="custom-select">
+                                            <select class="custom-select" onchange="changeRole('@member.UserId', '@member.TeamId')">
                                                 <option selected value="Admin">Admin</option>
                                                 <option value="Normal">Normal</option>
                                             </select>
                                         }
                                         else
                                         {
-                                            <select class="custom-select">
+                                            <select class="custom-select" onchange="changeRole('@member.UserId', '@member.TeamId')">
                                                 <option value="Admin">Admin</option>
                                                 <option selected value="Normal">Normal</option>
                                             </select>
@@ -159,7 +159,7 @@
                             }
                             else
                             {
-                                <button id="rm-team-member" class="shadow">
+                                <button id="rm-team-member" onclick="rmTeamMember('@user.Id','@Model.TeamId')" class="shadow">
                                     remove
                                 </button>
                             }
@@ -292,6 +292,48 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js" type="text/javascript">
     </script>
     <script type="text/javascript">
+        
+        
+        if ("@Model.TeamName" === "Personal") {
+            $('#inv-mbr-btn').attr("disabled", true);
+            $('#inv-mbr-btn').attr("title", "Cannot add members to Personal Team");
+        }
+        
+        function rmTeamMember(userId, teamId) {
+            $.ajax({
+                type: 'post',
+                url: '/Teams/DeleteMember',
+                beforeSend: function(req) {
+                    req.setRequestHeader('Content-type', 'application/json');
+                },
+                data: JSON.stringify({
+                    userId: userId,
+                    teamId: teamId
+                }),
+                success: function() {
+                    $('#' + userId).remove();
+                }
+            });
+        }
+        
+        function changeRole(userId, teamId) {
+            $.ajax({
+                type: 'post',
+                url: '/Teams/ChangeRole',
+                beforeSend: function(req) {
+                    req.setRequestHeader('Content-type', 'application/json');
+                },
+                data: JSON.stringify({
+                    userId: userId,
+                    teamId: teamId
+                }),
+                success: function() {
+                    showAlert("user role changes", "alert-success");
+                }
+            });
+        };
+        
+    
         $('#edit-team-profile-btn').click(function() {
             var width = $('#team-profile-container').width();
             $('#team-desc').toggle();
@@ -347,8 +389,22 @@
                     username: user,
                     teamId: teamId
                 }),
-                success: function() {
-                    alert("success");
+                success: function(resp) {
+                    switch(resp) {
+                    case 1:
+                        showAlert("User Not Found", "alert-danger");
+                        break;
+                    case 2:
+                        showAlert("Team Not Found", "alert-danger");
+                        break;
+                    case 3:
+                        showAlert("Cannot Add Member to Personal Team", "alert-danger");
+                        break;
+                    default:
+                        showAlert("User Added to Team!", "alert-success");
+                        
+                            
+                    }
                 }
             });
         }
